--- a/frontend/app/main.css
+++ b/frontend/app/main.css
@@ -39,8 +39,7 @@ body {
   color: #ffffff;
   cursor: pointer;
   display: block;
-  font-family: -apple-system, ".SFNSDisplay-Regular", "Helvetica Neue",
-    Helvetica, Arial, sans-serif;
+  font-family: -apple-system, ".SFNSDisplay-Regular", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 17px;
   font-family: bold;
   line-height: 100%;
@@ -61,36 +60,20 @@ body {
   background: #84fab0;
 
   /* Chrome 10-25, Safari 5.1-6 */
-  background: -webkit-linear-gradient(
-    to right,
-    rgba(132, 250, 176, 0.5),
-    rgba(143, 211, 244, 0.5)
-  );
+  background: -webkit-linear-gradient(to right, rgba(132, 250, 176, 0.5), rgba(143, 211, 244, 0.5));
 
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background: linear-gradient(
-    to right,
-    rgba(132, 250, 176, 0.5),
-    rgba(143, 211, 244, 0.5)
-  );
+  background: linear-gradient(to right, rgba(132, 250, 176, 0.5), rgba(143, 211, 244, 0.5));
 }
 .gradient-custom-4 {
   /* fallback for old browsers */
   background: #84fab0;
 
   /* Chrome 10-25, Safari 5.1-6 */
-  background: -webkit-linear-gradient(
-    to right,
-    rgba(132, 250, 176, 1),
-    rgba(143, 211, 244, 1)
-  );
+  background: -webkit-linear-gradient(to right, rgba(132, 250, 176, 1), rgba(143, 211, 244, 1));
 
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background: linear-gradient(
-    to right,
-    rgba(132, 250, 176, 1),
-    rgba(143, 211, 244, 1)
-  );
+  background: linear-gradient(to right, rgba(132, 250, 176, 1), rgba(143, 211, 244, 1));
 }
 .card-registration .select-input.form-control[readonly]:not([disabled]) {
   font-size: 1rem;
@@ -296,8 +279,7 @@ textarea.tall-textarea {
 .search-overlay-enter-active {
   opacity: 1;
   transform: scale(1);
-  transition: 0.33s visibility ease-in-out, 0.33s opacity ease-in-out,
-    0.33s transform ease-in-out;
+  transition: 0.33s visibility ease-in-out, 0.33s opacity ease-in-out, 0.33s transform ease-in-out;
 }
 
 .search-overlay-exit {
@@ -308,8 +290,7 @@ textarea.tall-textarea {
 .search-overlay-exit-active {
   opacity: 0;
   transform: scale(1.3);
-  transition: 0.33s visibility ease-in-out, 0.33s opacity ease-in-out,
-    0.33s transform ease-in-out;
+  transition: 0.33s visibility ease-in-out, 0.33s opacity ease-in-out, 0.33s transform ease-in-out;
 }
 
 .search-overlay-icon {
@@ -364,6 +345,21 @@ textarea.tall-textarea {
   opacity: 0.75;
   line-height: 1;
   color: #292929;
+}
+
+.form-overlay {
+  position: fixed;
+  width: 60%;
+  height: auto;
+  background-color: #fff;
+  box-shadow: 0px 0px 30px #0000004e;
+  border-radius: 10px;
+  z-index: 2;
+  left: 50%;
+  top: 50%;
+  margin-top: -30vh;
+  margin-left: -30vw;
+  padding: 20px;
 }
 
 @media (min-width: 700px) {
@@ -861,8 +857,7 @@ ul {
   position: absolute;
   right: 0;
   left: auto;
-  box-shadow: 0 10px 15px -3px rgba(46, 41, 51, 0.08),
-    0 4px 6px -2px rgba(71, 63, 79, 0.16);
+  box-shadow: 0 10px 15px -3px rgba(46, 41, 51, 0.08), 0 4px 6px -2px rgba(71, 63, 79, 0.16);
   font-size: 0.875rem;
   z-index: 9999;
   min-width: 10rem;
